src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  overflow-x: hidden;
}

#pinContainer {
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

#pinContainer .slide-container {
  height: 100vh;
  position: absolute;
  display: flex;
}

.slide-container .panel {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

span {
  color: #fff;
  font-size: 80px;
}

